# job-scraper

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
docs/superpowers/specs/: 2026-04-02-job-scraper-design.md
examples/: test_indeed.py
jobscraper/: __init__.py  exception.py  model.py  util.py
jobscraper/indeed/: __init__.py  constant.py  util.py
tests/: __init__.py  test_indeed.py  test_scrape_jobs.py  test_util.py
